# Rust

./: .gitignore  Cargo.toml
Course/: borrowing.rs
src/: .gitignore  Cargo.toml  api.rs  backend.rs  db.rs  dereferencing.rs  enums-option.rs  enums.rs  handlers.rs  index.html  lib.rs  main.rs  models.rs  ownership-in-functions.rs  package-lock.json  routers.rs  script.js  struct.rs
src/Course/: borrowing-in-functions.rs  struct.rs
src/api/: controller.rs  error.rs  main.rs  mod.rs  neo4J_api.rs  routers.rs
src/backend/: backend.rs
src/src/: launch.json
