[package]
name = "Rust"
version = "0.1.0"
edition = "2021"
default-run = "neo4J"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neo4rs = "0.7.1"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1.5" # Check for the latest version
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
warp = "0.3"

[[bin]]
name = "neo4J"
path = "src/bin/neo4j.rs"