[package]
name = "Rust"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neo4rs = "0.7.1"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1.5" # Check for the latest version
dotenv = "0.15.0"
neo4j = "4.4.32"
warp = "0.3"
futures-util = "0.3"
env_logger = "0.9.0"

[[bin]]
name = "neo4J"
path = "src/api/neo4J.rs"

[[bin]]
name = "backend"
path = "src/backend/backend.rs"

[[bin]]
name = "main"
path = "src/api/main.rs"

[lib]
name = "neo4j_project" # Ersätt med ditt faktiska biblioteksnamn
path = "src/lib.rs"